fix layout bug ,height 100% ,month+1,picture size

--- a/App.css
+++ b/App.css
@@ -14,3 +14,8 @@
     right: 0;
     margin: auto;
 }
+
+.pic-c{
+    position: relative;
+    top: 50%;
+}
